[package]
name = "hydro_server"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.9.9", features = ["vendored", "lua54", "serialize", "macros", "unstable"] }
immutable_string = "0.1.1"
uuid = { version = "1.10.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
hydro_common = { path = "../hydro_common" }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
tokio-stream = "0.1.9"
futures = "0.3.30"
base64 = "0.22.1"